fix(Select): prevent trigger button shrinking when clear button is visible

--- a/css/src/components/select.module.css
+++ b/css/src/components/select.module.css
@@ -19,6 +19,8 @@
 
 .Select-trigger {
   width: 100%;
+  flex: 1 1 0%;
+  min-width: 0;
   justify-content: space-between;
   padding-top: unset;
   padding-bottom: unset;
